[package]
name = "omnivers3-systems-actor"
version = "0.1.0"
authors = ["Perry Birch <perrybirch@vizidrix.com>"]
license = "MIT"
readme = "README.md"
keywords = ["omnivers3", "cqrs", "systems", "actor"]
repository = "https://github.com/omnivers3/systems/actor"
include = ["Cargo.toml", "build.rs", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
description = """
"""
categories = [""]

[dependencies]
sink = { path = "../../sink" }
# ascii = "0.9.1"
# chrono = "0.4.6"
# chunked_transfer = "0.3.1"
# encoding = "0.2.33"
# env_logger = "0.5.13"
# log = "0.4.6"
# url = "1.7.1"
# logging = { path = "../logging" }

[badges]
circle-ci = { repository = "omnivers3/systems/actor", branch = "master" }

### FEATURES #################################################################

[features]
default = ["std"]

# Provide impls for common standard library types like Vec<T> and HashMap<K, V>.
# Requires a dependency on the Rust standard library.
std = []

# Provide impls for types that require unstable functionality. For tracking and
# discussion of unstable functionality please refer to this issue:
#
#    https://github.com/serde-rs/serde/issues/812
unstable = []

# Provide impls for types in the Rust core allocation and collections library
# including String, Box<T>, Vec<T>, and Cow<T>. This is a subset of std but may
# be enabled without depending on all of std.
#
# Requires a dependency on the unstable core allocation library:
#
#    https://doc.rust-lang.org/alloc/
alloc = ["unstable"]