[package]
name = "cqrs"
version = "0.2.0"
edition = '2018'
authors = ["Perry Birch <perrybirch@vizidrix.com>"]
license = "MIT"
readme = "README.md"
keywords = ["omnivers3", "cqrs"]
repository = "https://github.com/omnivers3/systems/cqrs"
include = ["Cargo.toml", "build.rs", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
description = """

"""
categories = ["cqrs"]

[dependencies]
log = "0.4.14"

[badges]
circle-ci = { repository = "omnivers3/systems/cqrs", branch = "master" }

### FEATURES #################################################################

[features]
default = ["std"]

# Provide impls for common standard library types like Vec<T> and HashMap<K, V>.
# Requires a dependency on the Rust standard library.
std = []

# Provide impls for types that require unstable functionality. For tracking and
# discussion of unstable functionality please refer to this issue:
#
#    https://github.com/serde-rs/serde/issues/812
unstable = []

# Provide impls for types in the Rust core allocation and collections library
# including String, Box<T>, Vec<T>, and Cow<T>. This is a subset of std but may
# be enabled without depending on all of std.
#
# Requires a dependency on the unstable core allocation library:
#
#    https://doc.rust-lang.org/alloc/
alloc = ["unstable"]